750, 737, 706, 703 - video mirroring fix, rtc event routing (webrtc proj updated), chat text box word wrapping;

--- a/css/style.css
+++ b/css/style.css
@@ -18953,7 +18953,8 @@ filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
 	filter: blur(0.5em);
 	-webkit-filter: blur(0.5em);
 }
-.chat-call-block video, .video-full-container video {
+/* video mirroring, applied ONLY to the local video */
+video.localViewport {
     transform: scale(-1, 1);
     -webkit-transform: scale(-1, 1);
 }
